4570/prog2b/y.output
Terminals which are not used

   ERROR
   EXP


Rules never reduced

   20 @1: /* empty */


State 17 conflicts: 1 shift/reduce
State 20 conflicts: 1 shift/reduce
State 25 conflicts: 1 shift/reduce, 3 reduce/reduce
State 26 conflicts: 1 shift/reduce
State 29 conflicts: 1 shift/reduce
State 38 conflicts: 1 shift/reduce
State 44 conflicts: 2 shift/reduce
State 59 conflicts: 1 shift/reduce
State 60 conflicts: 1 shift/reduce
State 67 conflicts: 1 shift/reduce
State 71 conflicts: 1 shift/reduce, 3 reduce/reduce
State 82 conflicts: 1 shift/reduce
State 83 conflicts: 1 shift/reduce
State 87 conflicts: 1 shift/reduce
State 88 conflicts: 1 shift/reduce
State 89 conflicts: 1 shift/reduce, 3 reduce/reduce
State 107 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce
State 113 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 136 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program_header block PROGRAM_END
    2        | program_header block error

    3 program_header: PROGRAM IDENT SEMI
    4               | PROGRAM IDENT error
    5               | PROGRAM error SEMI
    6               | error IDENT SEMI

    7 block: declarations compound_statement

    8 declarations: declarations declaration
    9             | /* empty */

   10 declaration: VAR variable_decls
   11            | procedure_decl

   12 variable_decls: variable_decls variable_decl
   13               | variable_decl

   14 variable_decl: identifier_list COLON IDENT SEMI
   15              | identifier_list COLON IDENT error
   16              | identifier_list COLON error SEMI
   17              | identifier_list error IDENT SEMI

   18 procedure_decl: procedure_header block SEMI
   19               | procedure_header block error

   20 @1: /* empty */

   21 procedure_header: PROCEDURE IDENT @1 LPAR parameter_list RPAR SEMI
   22                 | PROCEDURE IDENT LPAR parameter_list RPAR error
   23                 | PROCEDURE IDENT LPAR parameter_list error SEMI
   24                 | PROCEDURE IDENT error parameter_list RPAR SEMI
   25                 | PROCEDURE IDENT error
   26                 | PROCEDURE error SEMI
   27                 | PROCEDURE IDENT SEMI

   28 parameter_list: parameter_group
   29               | parameter_list SEMI parameter_group
   30               | parameter_list error parameter_group

   31 parameter_group: identifier_list COLON IDENT
   32                | VAR identifier_list COLON IDENT
   33                | VAR identifier_list COLON error
   34                | VAR identifier_list error SEMI

   35 compound_statement: BGN statement_list END
   36                   | BGN statement_list error
   37                   | error statement_list END

   38 statement_list: statement
   39               | statement_list SEMI statement
   40               | statement_list error statement

   41 statement: /* empty */
   42          | IDENT
   43          | IDENT LPAR expression_list RPAR
   44          | IDENT error expression_list RPAR
   45          | IDENT LPAR expression_list error
   46          | IDENT ASSIGN_OP expression
   47          | WHILE expression DO_KEYWORD statement
   48          | WHILE expression error statement
   49          | REPEAT statement_list UNTIL expression
   50          | REPEAT statement_list error
   51          | IF expression THEN statement
   52          | IF expression error statement
   53          | IF expression THEN statement ELSE statement
   54          | IF expression error statement ELSE statement
   55          | compound_statement
   56          | error

   57 expression_list: expression
   58                | expression_list COMMA expression
   59                | expression_list error expression

   60 expression: simple_expression
   61           | simple_expression REL_OP simple_expression

   62 simple_expression: term
   63                  | ADD_OP term
   64                  | simple_expression ADD_OP term

   65 term: factor
   66     | term MUL_OP factor

   67 factor: IDENT
   68       | constant
   69       | LPAR expression RPAR
   70       | LPAR expression error
   71       | error expression RPAR

   72 constant: number
   73         | STRING
   74         | error

   75 number: UNSIGNED_INT
   76       | FLOAT

   77 identifier_list: IDENT
   78                | identifier_list COMMA IDENT
   79                | identifier_list COMMA error
   80                | identifier_list error IDENT


Terminals, with rules where they appear

$end (0) 0
error (256) 2 4 5 6 15 16 17 19 22 23 24 25 26 30 33 34 36 37 40 44
    45 48 50 52 54 56 59 70 71 74 79 80
IDENT (258) 3 4 6 14 15 17 21 22 23 24 25 27 31 32 42 43 44 45 46 67
    77 78 80
VAR (259) 10 32 33 34
COLON (260) 14 15 16 31 32 33
COMMA (261) 58 78 79
SEMI (262) 3 5 6 14 16 17 18 21 23 24 26 27 29 34 39
LPAR (263) 21 22 23 43 45 69 70
RPAR (264) 21 22 24 43 44 69 71
IF (265) 51 52 53 54
WHILE (266) 47 48
PROCEDURE (267) 21 22 23 24 25 26 27
BGN (268) 35 36
ELSE (269) 53 54
END (270) 35 37
DO_KEYWORD (271) 47
REPEAT (272) 49 50
UNTIL (273) 49
THEN (274) 51 53
ADD_OP (275) 63 64
MUL_OP (276) 66
REL_OP (277) 61
STRING (278) 73
FLOAT (279) 76
UNSIGNED_INT (280) 75
ASSIGN_OP (281) 46
PROGRAM (282) 3 4 5
PROGRAM_END (283) 1
ERROR (284)
EXP (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1 2, on right: 0
program_header (33)
    on left: 3 4 5 6, on right: 1 2
block (34)
    on left: 7, on right: 1 2 18 19
declarations (35)
    on left: 8 9, on right: 7 8
declaration (36)
    on left: 10 11, on right: 8
variable_decls (37)
    on left: 12 13, on right: 10 12
variable_decl (38)
    on left: 14 15 16 17, on right: 12 13
procedure_decl (39)
    on left: 18 19, on right: 11
procedure_header (40)
    on left: 21 22 23 24 25 26 27, on right: 18 19
@1 (41)
    on left: 20, on right: 21
parameter_list (42)
    on left: 28 29 30, on right: 21 22 23 24 29 30
parameter_group (43)
    on left: 31 32 33 34, on right: 28 29 30
compound_statement (44)
    on left: 35 36 37, on right: 7 55
statement_list (45)
    on left: 38 39 40, on right: 35 36 37 39 40 49 50
statement (46)
    on left: 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56,
    on right: 38 39 40 47 48 51 52 53 54
expression_list (47)
    on left: 57 58 59, on right: 43 44 45 58 59
expression (48)
    on left: 60 61, on right: 46 47 48 49 51 52 53 54 57 58 59 69 70
    71
simple_expression (49)
    on left: 62 63 64, on right: 60 61 64
term (50)
    on left: 65 66, on right: 62 63 64 66
factor (51)
    on left: 67 68 69 70 71, on right: 65 66
constant (52)
    on left: 72 73 74, on right: 68
number (53)
    on left: 75 76, on right: 72
identifier_list (54)
    on left: 77 78 79 80, on right: 14 15 16 17 31 32 33 34 78 79 80


state 0

    0 $accept: . program $end

    error    shift, and go to state 1
    PROGRAM  shift, and go to state 2

    program         go to state 3
    program_header  go to state 4


state 1

    6 program_header: error . IDENT SEMI

    IDENT  shift, and go to state 5


state 2

    3 program_header: PROGRAM . IDENT SEMI
    4               | PROGRAM . IDENT error
    5               | PROGRAM . error SEMI

    error  shift, and go to state 6
    IDENT  shift, and go to state 7


state 3

    0 $accept: program . $end

    $end  shift, and go to state 8


state 4

    1 program: program_header . block PROGRAM_END
    2        | program_header . block error

    $default  reduce using rule 9 (declarations)

    block         go to state 9
    declarations  go to state 10


state 5

    6 program_header: error IDENT . SEMI

    SEMI  shift, and go to state 11


state 6

    5 program_header: PROGRAM error . SEMI

    SEMI  shift, and go to state 12


state 7

    3 program_header: PROGRAM IDENT . SEMI
    4               | PROGRAM IDENT . error

    error  shift, and go to state 13
    SEMI   shift, and go to state 14


state 8

    0 $accept: program $end .

    $default  accept


state 9

    1 program: program_header block . PROGRAM_END
    2        | program_header block . error

    error        shift, and go to state 15
    PROGRAM_END  shift, and go to state 16


state 10

    7 block: declarations . compound_statement
    8 declarations: declarations . declaration

    error      shift, and go to state 17
    VAR        shift, and go to state 18
    PROCEDURE  shift, and go to state 19
    BGN        shift, and go to state 20

    declaration         go to state 21
    procedure_decl      go to state 22
    procedure_header    go to state 23
    compound_statement  go to state 24


state 11

    6 program_header: error IDENT SEMI .

    $default  reduce using rule 6 (program_header)


state 12

    5 program_header: PROGRAM error SEMI .

    $default  reduce using rule 5 (program_header)


state 13

    4 program_header: PROGRAM IDENT error .

    $default  reduce using rule 4 (program_header)


state 14

    3 program_header: PROGRAM IDENT SEMI .

    $default  reduce using rule 3 (program_header)


state 15

    2 program: program_header block error .

    $default  reduce using rule 2 (program)


state 16

    1 program: program_header block PROGRAM_END .

    $default  reduce using rule 1 (program)


state 17

   37 compound_statement: error . statement_list END

    error   shift, and go to state 25
    IDENT   shift, and go to state 26
    IF      shift, and go to state 27
    WHILE   shift, and go to state 28
    BGN     shift, and go to state 20
    REPEAT  shift, and go to state 29

    error  [reduce using rule 41 (statement)]
    SEMI   reduce using rule 41 (statement)
    END    reduce using rule 41 (statement)

    compound_statement  go to state 30
    statement_list      go to state 31
    statement           go to state 32


state 18

   10 declaration: VAR . variable_decls

    IDENT  shift, and go to state 33

    variable_decls   go to state 34
    variable_decl    go to state 35
    identifier_list  go to state 36


state 19

   21 procedure_header: PROCEDURE . IDENT @1 LPAR parameter_list RPAR SEMI
   22                 | PROCEDURE . IDENT LPAR parameter_list RPAR error
   23                 | PROCEDURE . IDENT LPAR parameter_list error SEMI
   24                 | PROCEDURE . IDENT error parameter_list RPAR SEMI
   25                 | PROCEDURE . IDENT error
   26                 | PROCEDURE . error SEMI
   27                 | PROCEDURE . IDENT SEMI

    error  shift, and go to state 37
    IDENT  shift, and go to state 38


state 20

   35 compound_statement: BGN . statement_list END
   36                   | BGN . statement_list error

    error   shift, and go to state 25
    IDENT   shift, and go to state 26
    IF      shift, and go to state 27
    WHILE   shift, and go to state 28
    BGN     shift, and go to state 20
    REPEAT  shift, and go to state 29

    error  [reduce using rule 41 (statement)]
    SEMI   reduce using rule 41 (statement)
    END    reduce using rule 41 (statement)

    compound_statement  go to state 30
    statement_list      go to state 39
    statement           go to state 32


state 21

    8 declarations: declarations declaration .

    $default  reduce using rule 8 (declarations)


state 22

   11 declaration: procedure_decl .

    $default  reduce using rule 11 (declaration)


state 23

   18 procedure_decl: procedure_header . block SEMI
   19               | procedure_header . block error

    $default  reduce using rule 9 (declarations)

    block         go to state 40
    declarations  go to state 10


state 24

    7 block: declarations compound_statement .

    $default  reduce using rule 7 (block)


state 25

   37 compound_statement: error . statement_list END
   56 statement: error .

    error   shift, and go to state 25
    IDENT   shift, and go to state 26
    IF      shift, and go to state 27
    WHILE   shift, and go to state 28
    BGN     shift, and go to state 20
    REPEAT  shift, and go to state 29

    error  [reduce using rule 41 (statement)]
    error  [reduce using rule 56 (statement)]
    SEMI   reduce using rule 41 (statement)
    SEMI   [reduce using rule 56 (statement)]
    ELSE   reduce using rule 56 (statement)
    END    reduce using rule 41 (statement)
    END    [reduce using rule 56 (statement)]
    UNTIL  reduce using rule 56 (statement)

    compound_statement  go to state 30
    statement_list      go to state 31
    statement           go to state 32


state 26

   42 statement: IDENT .
   43          | IDENT . LPAR expression_list RPAR
   44          | IDENT . error expression_list RPAR
   45          | IDENT . LPAR expression_list error
   46          | IDENT . ASSIGN_OP expression

    error      shift, and go to state 41
    LPAR       shift, and go to state 42
    ASSIGN_OP  shift, and go to state 43

    error  [reduce using rule 42 (statement)]
    SEMI   reduce using rule 42 (statement)
    ELSE   reduce using rule 42 (statement)
    END    reduce using rule 42 (statement)
    UNTIL  reduce using rule 42 (statement)


state 27

   51 statement: IF . expression THEN statement
   52          | IF . expression error statement
   53          | IF . expression THEN statement ELSE statement
   54          | IF . expression error statement ELSE statement

    error         shift, and go to state 44
    IDENT         shift, and go to state 45
    LPAR          shift, and go to state 46
    ADD_OP        shift, and go to state 47
    STRING        shift, and go to state 48
    FLOAT         shift, and go to state 49
    UNSIGNED_INT  shift, and go to state 50

    expression         go to state 51
    simple_expression  go to state 52
    term               go to state 53
    factor             go to state 54
    constant           go to state 55
    number             go to state 56


state 28

   47 statement: WHILE . expression DO_KEYWORD statement
   48          | WHILE . expression error statement

    error         shift, and go to state 44
    IDENT         shift, and go to state 45
    LPAR          shift, and go to state 46
    ADD_OP        shift, and go to state 47
    STRING        shift, and go to state 48
    FLOAT         shift, and go to state 49
    UNSIGNED_INT  shift, and go to state 50

    expression         go to state 57
    simple_expression  go to state 52
    term               go to state 53
    factor             go to state 54
    constant           go to state 55
    number             go to state 56


state 29

   49 statement: REPEAT . statement_list UNTIL expression
   50          | REPEAT . statement_list error

    error   shift, and go to state 25
    IDENT   shift, and go to state 26
    IF      shift, and go to state 27
    WHILE   shift, and go to state 28
    BGN     shift, and go to state 20
    REPEAT  shift, and go to state 29

    error  [reduce using rule 41 (statement)]
    SEMI   reduce using rule 41 (statement)
    UNTIL  reduce using rule 41 (statement)

    compound_statement  go to state 30
    statement_list      go to state 58
    statement           go to state 32


state 30

   55 statement: compound_statement .

    $default  reduce using rule 55 (statement)


state 31

   37 compound_statement: error statement_list . END
   39 statement_list: statement_list . SEMI statement
   40               | statement_list . error statement

    error  shift, and go to state 59
    SEMI   shift, and go to state 60
    END    shift, and go to state 61


state 32

   38 statement_list: statement .

    $default  reduce using rule 38 (statement_list)


state 33

   77 identifier_list: IDENT .

    $default  reduce using rule 77 (identifier_list)


state 34

   10 declaration: VAR variable_decls .
   12 variable_decls: variable_decls . variable_decl

    IDENT  shift, and go to state 33

    $default  reduce using rule 10 (declaration)

    variable_decl    go to state 62
    identifier_list  go to state 36


state 35

   13 variable_decls: variable_decl .

    $default  reduce using rule 13 (variable_decls)


state 36

   14 variable_decl: identifier_list . COLON IDENT SEMI
   15              | identifier_list . COLON IDENT error
   16              | identifier_list . COLON error SEMI
   17              | identifier_list . error IDENT SEMI
   78 identifier_list: identifier_list . COMMA IDENT
   79                | identifier_list . COMMA error
   80                | identifier_list . error IDENT

    error  shift, and go to state 63
    COLON  shift, and go to state 64
    COMMA  shift, and go to state 65


state 37

   26 procedure_header: PROCEDURE error . SEMI

    SEMI  shift, and go to state 66


state 38

   21 procedure_header: PROCEDURE IDENT . @1 LPAR parameter_list RPAR SEMI
   22                 | PROCEDURE IDENT . LPAR parameter_list RPAR error
   23                 | PROCEDURE IDENT . LPAR parameter_list error SEMI
   24                 | PROCEDURE IDENT . error parameter_list RPAR SEMI
   25                 | PROCEDURE IDENT . error
   27                 | PROCEDURE IDENT . SEMI

    error  shift, and go to state 67
    SEMI   shift, and go to state 68
    LPAR   shift, and go to state 69

    LPAR  [reduce using rule 20 (@1)]

    @1  go to state 70


state 39

   35 compound_statement: BGN statement_list . END
   36                   | BGN statement_list . error
   39 statement_list: statement_list . SEMI statement
   40               | statement_list . error statement

    error  shift, and go to state 71
    SEMI   shift, and go to state 60
    END    shift, and go to state 72


state 40

   18 procedure_decl: procedure_header block . SEMI
   19               | procedure_header block . error

    error  shift, and go to state 73
    SEMI   shift, and go to state 74


state 41

   44 statement: IDENT error . expression_list RPAR

    error         shift, and go to state 44
    IDENT         shift, and go to state 45
    LPAR          shift, and go to state 46
    ADD_OP        shift, and go to state 47
    STRING        shift, and go to state 48
    FLOAT         shift, and go to state 49
    UNSIGNED_INT  shift, and go to state 50

    expression_list    go to state 75
    expression         go to state 76
    simple_expression  go to state 52
    term               go to state 53
    factor             go to state 54
    constant           go to state 55
    number             go to state 56


state 42

   43 statement: IDENT LPAR . expression_list RPAR
   45          | IDENT LPAR . expression_list error

    error         shift, and go to state 44
    IDENT         shift, and go to state 45
    LPAR          shift, and go to state 46
    ADD_OP        shift, and go to state 47
    STRING        shift, and go to state 48
    FLOAT         shift, and go to state 49
    UNSIGNED_INT  shift, and go to state 50

    expression_list    go to state 77
    expression         go to state 76
    simple_expression  go to state 52
    term               go to state 53
    factor             go to state 54
    constant           go to state 55
    number             go to state 56


state 43

   46 statement: IDENT ASSIGN_OP . expression

    error         shift, and go to state 44
    IDENT         shift, and go to state 45
    LPAR          shift, and go to state 46
    ADD_OP        shift, and go to state 47
    STRING        shift, and go to state 48
    FLOAT         shift, and go to state 49
    UNSIGNED_INT  shift, and go to state 50

    expression         go to state 78
    simple_expression  go to state 52
    term               go to state 53
    factor             go to state 54
    constant           go to state 55
    number             go to state 56


state 44

   71 factor: error . expression RPAR
   74 constant: error .

    error         shift, and go to state 44
    IDENT         shift, and go to state 45
    LPAR          shift, and go to state 46
    ADD_OP        shift, and go to state 47
    STRING        shift, and go to state 48
    FLOAT         shift, and go to state 49
    UNSIGNED_INT  shift, and go to state 50

    error       [reduce using rule 74 (constant)]
    COMMA       reduce using rule 74 (constant)
    SEMI        reduce using rule 74 (constant)
    RPAR        reduce using rule 74 (constant)
    ELSE        reduce using rule 74 (constant)
    END         reduce using rule 74 (constant)
    DO_KEYWORD  reduce using rule 74 (constant)
    UNTIL       reduce using rule 74 (constant)
    THEN        reduce using rule 74 (constant)
    ADD_OP      [reduce using rule 74 (constant)]
    MUL_OP      reduce using rule 74 (constant)
    REL_OP      reduce using rule 74 (constant)

    expression         go to state 79
    simple_expression  go to state 52
    term               go to state 53
    factor             go to state 54
    constant           go to state 55
    number             go to state 56


state 45

   67 factor: IDENT .

    $default  reduce using rule 67 (factor)


state 46

   69 factor: LPAR . expression RPAR
   70       | LPAR . expression error

    error         shift, and go to state 44
    IDENT         shift, and go to state 45
    LPAR          shift, and go to state 46
    ADD_OP        shift, and go to state 47
    STRING        shift, and go to state 48
    FLOAT         shift, and go to state 49
    UNSIGNED_INT  shift, and go to state 50

    expression         go to state 80
    simple_expression  go to state 52
    term               go to state 53
    factor             go to state 54
    constant           go to state 55
    number             go to state 56


state 47

   63 simple_expression: ADD_OP . term

    error         shift, and go to state 44
    IDENT         shift, and go to state 45
    LPAR          shift, and go to state 46
    STRING        shift, and go to state 48
    FLOAT         shift, and go to state 49
    UNSIGNED_INT  shift, and go to state 50

    term      go to state 81
    factor    go to state 54
    constant  go to state 55
    number    go to state 56


state 48

   73 constant: STRING .

    $default  reduce using rule 73 (constant)


state 49

   76 number: FLOAT .

    $default  reduce using rule 76 (number)


state 50

   75 number: UNSIGNED_INT .

    $default  reduce using rule 75 (number)


state 51

   51 statement: IF expression . THEN statement
   52          | IF expression . error statement
   53          | IF expression . THEN statement ELSE statement
   54          | IF expression . error statement ELSE statement

    error  shift, and go to state 82
    THEN   shift, and go to state 83


state 52

   60 expression: simple_expression .
   61           | simple_expression . REL_OP simple_expression
   64 simple_expression: simple_expression . ADD_OP term

    ADD_OP  shift, and go to state 84
    REL_OP  shift, and go to state 85

    $default  reduce using rule 60 (expression)


state 53

   62 simple_expression: term .
   66 term: term . MUL_OP factor

    MUL_OP  shift, and go to state 86

    $default  reduce using rule 62 (simple_expression)


state 54

   65 term: factor .

    $default  reduce using rule 65 (term)


state 55

   68 factor: constant .

    $default  reduce using rule 68 (factor)


state 56

   72 constant: number .

    $default  reduce using rule 72 (constant)


state 57

   47 statement: WHILE expression . DO_KEYWORD statement
   48          | WHILE expression . error statement

    error       shift, and go to state 87
    DO_KEYWORD  shift, and go to state 88


state 58

   39 statement_list: statement_list . SEMI statement
   40               | statement_list . error statement
   49 statement: REPEAT statement_list . UNTIL expression
   50          | REPEAT statement_list . error

    error  shift, and go to state 89
    SEMI   shift, and go to state 60
    UNTIL  shift, and go to state 90


state 59

   40 statement_list: statement_list error . statement

    error   shift, and go to state 25
    IDENT   shift, and go to state 26
    IF      shift, and go to state 27
    WHILE   shift, and go to state 28
    BGN     shift, and go to state 20
    REPEAT  shift, and go to state 29

    error  [reduce using rule 41 (statement)]
    SEMI   reduce using rule 41 (statement)
    END    reduce using rule 41 (statement)

    compound_statement  go to state 30
    statement           go to state 91

